feat: implement full-stack architecture, including chrome extension scaffold, frontend job services, microservice controllers, and containerized deployment configuration.